@@ -5,6 +5,7 @@ import net.sourceforge.squirrel_sql.fw.datasetviewer.DataSetDefinition;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.DataSetException;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.IDataSet;
 import net.sourceforge.squirrel_sql.fw.util.IMessageHandler;
+import net.sourceforge.squirrel_sql.plugins.hibernate.mapping.MappedClassInfo;
 import net.sourceforge.squirrel_sql.plugins.hibernate.server.ReflectionCaller;
 import net.sourceforge.squirrel_sql.plugins.hibernate.mapping.PropertyInfo;
 
@@ -73,6 +74,12 @@ public class ResultDataSet implements IDataSet
          {
             return "<unitialized persistent collection>";
          }
+      }
+
+      MappedClassInfo mappedClassInfo = ViewObjectsUtil.findMappedClassInfo(hpr.getTypeName(), _singleType.getAllMappedClassInfos(), true);
+      if (null != mappedClassInfo)
+      {
+         return new SingleResult(hpr.getValue(), mappedClassInfo);
       }
 
       return hpr.getValue();
